app2AuthenticationGenerator/microservice1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-microservice1
spec:
  selector:
    app: app2-microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8010
  type: ClusterIP
