app2AuthenticationGenerator/microservice1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-microservice1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth-generator/generate(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app2-microservice1
            port:
              number: 80
